# bidding_project

./: .gitignore  README.md  SETUP_GUIDE.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  security.yml
bidding/: models.py  price_helper.py  tasks.py
bidding/migrations/: 0002_performance_index.py
bidding_project/: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  SETUP_GUIDE.md  requirements.txt  test_performance.py
bidding_project/.github/workflows/: ci.yml  security.yml
bidding_project/backend/: settings.py  urls.py
bidding_project/bidding/: admin.py  urls.py  views.py
bidding_project/bidding/management/commands/: audit_bids.py
bidding_project/bidding/migrations/: 0001_initial.py
bidding_project/chart/: README.md  values.yaml
bidding_project/chart/templates/: _helpers.tpl  deployment.yaml  worker-deployment.yaml
bidding_project/competitor-monitor/: Dockerfile
bidding_project/legacy/: priceHelper.php
chart/: Chart.yaml
chart/templates/: competitor-monitor-deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
competitor-monitor/: README.md  package.json  tsconfig.json
competitor-monitor/src/: index.ts
tests/: test_api.py  test_integration.py  test_price_helper.py  test_tasks.py
